examples/test/testpolicy18311.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18311
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key42: value48
      key18: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value24
          key36: value37
      podSelector:
        matchLabels:
          key14: value49
          key46: value48
          key32: value23
